# robot-simulator-rs

./: .gitignore  Cargo.toml  Makefile  package-lock.json
python/: Cargo.toml  pyproject.toml  robotsim.pyi  test_pybullet.py  test_script.sh
python/src/: lib.rs  visualiser.rs
src/: bevy_config.rs  camera.rs  ingame_menu.rs  lib.rs  main.rs  menu.rs  scene.rs  system_set.rs  web_demo.rs
src/assets_loader/: mesh.rs  mod.rs  urdf.rs
src/camera/: mod.rs
src/collision_checker/: checker.rs  mod.rs
src/dev/: dev_editor.rs  mod.rs  rapier.rs  robot_state_setter.rs
src/engine/: debug_render.rs  graphics.rs  mod.rs  mouse.rs  ui.rs
src/engine/objects/: node.rs
src/file_system_interaction/: asset_loading.rs  mod.rs
src/level_instantiation/: map.rs  on_spawn.rs
src/level_instantiation/on_spawn/: collider.rs  grass.rs  ground.rs  hidden.rs  player.rs  util.rs
src/physics/: mod.rs
src/player_control/: actions.rs  camera.rs  mod.rs
src/player_control/camera/: focus.rs
src/robot/: mod.rs  plugin.rs  sync_state.rs  visuals.rs
src/robot_vis/: mod.rs  sync_state.rs  visuals.rs
src/util/: mod.rs  pipe.rs  urdf.rs
