[package]
name    = "robotsim"
version = "0.1.0"
edition = "2021"

[dependencies]
# error handling
anyhow = {version = "1.0.88", features = ["backtrace"]}
thiserror = "1.0.63"

# main dependencies
bevy = "0.14"
bevy_asset_loader = {version="0.21.0", features=["standard_dynamic_assets"]}
bevy_panorbit_camera = "0.19.3"
k = "0.32.0"
futures = "0.3.30"
mesh-loader = "0.1.12"
rapier3d = "0.22.0"
urdf-rs = "0.9.0"
serde = "1.0.210"
bevy_editor_pls = "0.9.0"
bevy_egui = {version="0.29.0", features = [
    # "manage_clipboard",
    "open_url", "default_fonts", "render"] }
bevy_rapier3d = "0.27.0"
color-backtrace = "0.6.1"
color-eyre = "0.6.3"
eyre = "0.6.12"

[profile.release]
opt-level = 's'
lto       = "thin"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[build]
target = "x86_64-unkown-linux-gnu"
rustflags = ["--cfg=web_sys_unstable_apis"]

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"