[package]
name = "py-robotsim"
version = "0.1.0"
authors = ["soraxas <tin@tinyiu.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"

[lib]
name = "robotsim"
crate-type = ["cdylib"]

[features]
default = ["visualiser"]
visualiser = ["bevy"]

[dependencies]
robotsim = { path = ".." }
bevy = {version = "0.14", optional = true}
ouroboros = "0.18.4"

# updates the following when this PR is merged: https://github.com/PyO3/rust-numpy/pull/435
pyo3 = { version = "0.21", features = ["abi3-py37", "extension-module", "eyre",
# and remove the following when the PR is merged
"experimental-declarative-modules"
] }
numpy = "0.21.0"
eyre = "0.6.5"
bevy_winit = "0.14.2"
crossbeam-channel = "0.5.13"
log = "0.4.22"
